--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "flex"]
 	path = flex
-	url = https://git.sailfishos.org/mirror/flex.git
+	url = https://github.com/sailfishos-mirror/flex.git
